modificacion en los modulos

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -19,10 +19,12 @@
 
             <app-breadcrumbs></app-breadcrumbs>
 
-            <router-outlet></router-outlet>
+
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
+            <router-outlet></router-outlet>
+            <!-- 
             <div class="row">
                 <div class="col-12">
                     <div class="card">
@@ -31,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ============================================================== -->
             <!-- End PAge Content -->
             <!-- ============================================================== -->
